# krash

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  autogen.sh  configure.ac  version.sh
debian/: changelog  control  control.in  copyright
doc/: Makefile.am  krash.pod
doc/examples/: biprocessor.profile  simple.profile
examples/: Makefile.am  biprocessor.profile  simple.profile
samples/: big_profile  profile
src/: Makefile.am  actions.cpp  actions.hpp  c++tab.h  cgroups.cpp  cgroups.hpp  check_kernel.cpp  check_kernel.hpp  component.hpp  components.cpp  components.hpp  cpuinjector.cpp  cpuinjector.hpp  errors.hpp  events.cpp  events.hpp  krash.c  krash.cpp  profile-parser-driver.cpp  profile-parser-driver.hpp  profile-parser-grammar.yy  profile-parser-lex.ll  profile.hpp  utils.cpp  utils.hpp
tests/: Makefile.am  test_help.sh  test_kill.sh  test_noprofile.sh  test_profile.sh  test_version.sh
